crates/toml_edit/tests/snapshots/invalid/float/us-before-dot.stderr
TOML parse error at line 1, column 20
  |
1 | us-before-point = 1_.2
  |                    ^
`_` may only go between digits
